# clews_og_bridge

./: .gitignore  PATH.txt  README.md  main.py  output.json  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
configs/: mapping.yaml
examples/: example_output.json  run_pipeline.py
schemas/: exchange_v1.json
src/: reader.py  transformer.py  validator.py  writer.py
src/clews_og_bridge/: cli.py  config.py  mapper.py  models.py  normalizer.py  pipeline.py  reader.py  validator.py  writer.py
src/clews_og_bridge/transformers/: __init__.py  base.py  production_weights.py  productivity.py  utils.py
tests/: test_api.py  test_mapper.py  test_og_core_compat.py  test_pipeline.py  test_reader.py  test_transformer.py  test_transformers.py  test_validator.py
tests/data/: AnnualEmissions.csv  AnnualEmissions_sample.csv  TotalAnnualTechnologyActivity.csv  TotalAnnualTechnologyActivity_case.csv  TotalDiscountedCost.csv  TotalDiscountedCost_small.csv
tests/data/malformed/: AnnualEmissions_bad.csv
